--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
     <!-- Work -->
     <div id="work" class="container-fluid">
         <div class="container ">
-            <h3 class="text-xs-center h3-projects mt-2"><i class="fa fa-cogs " aria-hidden="true"></i></h3>
-            <h3 class="h3-projects text-xs-center">MY PROJECTS</h3>
+            <h3 class="h3-projects text-xs-center mt-2">OUR PROJECTS</h3>
             <p class=" px-1 text-xs-center">
                 I strive to create software to solve real world problems. This is achieved by meticulous planning, smart coding, intuitive designing, and coffee.
             </p>
@@ -94,14 +93,14 @@
 
                         <!--Card content-->
                         <div class="card-block">
-                            <h6 style="text-align: left;" class="blue-text">Google Maps JS API <span class="purple-text"> Bootstrap 4</span></h6>
+                            <h6 style="text-align: left;">August 2016</h6>
                             <!--Title-->
-                            <h4 class="card-title">Smart Walk</h4>
+                            <h4 class="card-title">Nyambogo</h4>
                             <!--Text-->
                             <p class="card-text">Web App to display the shortest walk across two buildings in a campus. Inspired by long walks during my Freshman year</p>
                             <p class="card-text">Next update to include wheelchair accessible routes</p>
                             <div class="text-xs-center">
-                                <a href="https://rishabhravindra.github.io/smart-walk/" target="_blank" class="btn blue"><i class="fa fa-globe" aria-hidden="true"></i>&nbsp;  Visit Website</a>
+                                <a href="https://rishabhravindra.github.io/smart-walk/" target="_blank" class="btn blue">&nbsp;  Learn More</a>
                             </div>
                         </div>
                         <!--/.Card content-->
@@ -121,14 +120,14 @@
 
                         <!--Card content-->
                         <div class="card-block">
-                            <h6 class="green-text">Android </h6>
+                            <h6 >Mar 2016 </h6>
                             <!--Title-->
-                            <h4 class="card-title">Grammr</h4>
+                            <h4 class="card-title">Burere</h4>
                             <!--Text-->
                             <p class="card-text"> Android app to help international students improve their English grammar skills and learn more about American culture </p>
                             <p class="card-text">Built for Android API level 16 and up (4.1.x + .)</p>
                             <div class="text-xs-center">
-                                <a href="https://github.com/Rishabhravindra/Grammr2" target="_blank" class="btn grey darken-3"><i class="fa fa-github" aria-hidden="true"></i>&nbsp;  View on GitHub</a>
+                                <a href="https://github.com/Rishabhravindra/Grammr2" target="_blank" class="btn blue">&nbsp;  Learn More</a>
                             </div>
                         </div>
                         <!--/.Card content-->
@@ -145,14 +144,14 @@
                         <!--/.Card image-->
                         <!--Card content-->
                         <div class="card-block">
-                            <h6 class="purple-text">Bootstrap <span class="pink-text"> getmdl.io</span></h6>
+                            <h6 >Dec 2015</h6>
                             <!--Title-->
-                            <h4 class="card-title">Coop Koala</h4>
+                            <h4 class="card-title">Roche</h4>
                             <!--Text-->
                             <p class="card-text">Website&mdash;that shows "Day in the Life" a co-op/intern&mdash;for prospective students to gain insight into a co-op or company </p>
                             <p class="card-text">Won <i>Best College Themed Hack</i> at <a href="https://devpost.com/software/coopkoala-pg0nz6" target="_blank">Revolution UC 2016</a> Hackathon</p>
                             <div class="text-xs-center">
-                                <a href="https://github.com/Rishabhravindra/Coop-Koala" target="_blank" class="btn grey darken-3"><i class="fa fa-github" aria-hidden="true"></i>&nbsp;  View on GitHub</a>
+                                <a href="https://github.com/Rishabhravindra/Coop-Koala" target="_blank" class="btn blue">&nbsp;  Learn More</a>
                             </div>
                         </div>
                         <!--/.Card content-->
