:art: Update colors

--- a/index.html
+++ b/index.html
@@ -79,36 +79,11 @@
         <div class="container ">
             <h3 class="h3-projects text-xs-center mt-2">OUR PROJECTS</h3>
             <p class=" px-1 text-xs-center">
-                I strive to create software to solve real world problems. This is achieved by meticulous planning, smart coding, intuitive designing, and coffee.
+               Engineers Without Borders is involved in a variety of projects across the world.  Our chapter at University of Cincinnati has projects in Kenya and Tanzania, as well as local projects in Cincinnati.
             </p>
             <div class="projects pt-2 ">
 
-                <div class="col-lg-4 col-md-6">
-                    <!--Card-->
-                    <div class="card">
-
-                        <!--Card image-->
-                        <img class="img-fluid" src="img/sm_map.png" alt="CoopKoala">
-                        <!--/.Card image-->
-
-                        <!--Card content-->
-                        <div class="card-block">
-                            <h6 style="text-align: left;">August 2016</h6>
-                            <!--Title-->
-                            <h4 class="card-title">Nyambogo</h4>
-                            <!--Text-->
-                            <p class="card-text">Web App to display the shortest walk across two buildings in a campus. Inspired by long walks during my Freshman year</p>
-                            <p class="card-text">Next update to include wheelchair accessible routes</p>
-                            <div class="text-xs-center">
-                                <a href="https://rishabhravindra.github.io/smart-walk/" target="_blank" class="btn blue">&nbsp;  Learn More</a>
-                            </div>
-                        </div>
-                        <!--/.Card content-->
-
-                    </div>
-                    <!--/.Card-->
-                </div>
-
+               
                 <div class="col-lg-4 col-md-6">
 
                     <!--Card-->
@@ -124,10 +99,9 @@
                             <!--Title-->
                             <h4 class="card-title">Burere</h4>
                             <!--Text-->
-                            <p class="card-text"> Android app to help international students improve their English grammar skills and learn more about American culture </p>
-                            <p class="card-text">Built for Android API level 16 and up (4.1.x + .)</p>
+                            <p class="card-text"> Obtained in 2009, the Burere Schoolhouse Project has been a joint venture between EWB-UC and Village Life Outreach Project (VLOP), a local non-profit that works in the Rorya District of Tanzania.</p>
                             <div class="text-xs-center">
-                                <a href="https://github.com/Rishabhravindra/Grammr2" target="_blank" class="btn blue">&nbsp;  Learn More</a>
+                                <a href="#" target="_blank" class="btn blue">&nbsp;  Learn More</a>
                             </div>
                         </div>
                         <!--/.Card content-->
@@ -136,6 +110,31 @@
                     <!--/.Card-->
 
                 </div>
+                 <div class="col-lg-4 col-md-6">
+                    <!--Card-->
+                    <div class="card">
+
+                        <!--Card image-->
+                        <img class="img-fluid" src="img/sm_map.png" alt="CoopKoala">
+                        <!--/.Card image-->
+
+                        <!--Card content-->
+                        <div class="card-block">
+                            <h6 style="text-align: left;">August 2016</h6>
+                            <!--Title-->
+                            <h4 class="card-title">Nyambogo</h4>
+                            <!--Text-->
+                            <p class="card-text">As part of our joint venture with Village Life Outreach Project, we are working to provide a year-round source of potable water to a the community of Nyambogo, a village of roughly 5,000 people.</p>
+                            <div class="text-xs-center">
+                                <a href="#" target="_blank" class="btn blue">&nbsp;  Learn More</a>
+                            </div>
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+
                 <div class="col-lg-4 col-md-6">
                     <!--Card-->
                     <div class="card">
@@ -146,12 +145,11 @@
                         <div class="card-block">
                             <h6 >Dec 2015</h6>
                             <!--Title-->
-                            <h4 class="card-title">Roche</h4>
+                            <h4 class="card-title">Otho Abwao</h4>
                             <!--Text-->
-                            <p class="card-text">Website&mdash;that shows "Day in the Life" a co-op/intern&mdash;for prospective students to gain insight into a co-op or company </p>
-                            <p class="card-text">Won <i>Best College Themed Hack</i> at <a href="https://devpost.com/software/coopkoala-pg0nz6" target="_blank">Revolution UC 2016</a> Hackathon</p>
+                            <p class="card-text">Started in 2006, Otho Abwao, Kenya was our chapter's first partner community. This community had identified the need for clean and sanitary water that was easy to access.</p>
                             <div class="text-xs-center">
-                                <a href="https://github.com/Rishabhravindra/Coop-Koala" target="_blank" class="btn blue">&nbsp;  Learn More</a>
+                                <a href="#" target="_blank" class="btn blue">&nbsp;  Learn More</a>
                             </div>
                         </div>
                         <!--/.Card content-->
