--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                     <!--Links-->
                     <ul class="nav navbar-nav float-md-right smooth-scroll">
                         <li class="nav-item active"> <a class="nav-link" href="#">HOME </a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="#work">WORK</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="#work">PROJECTS</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="#work">CONTACT</a> </li>
                         <li class="nav-item"> <a class="nav-link" href="#about">ABOUT</a> </li>
                     </ul>
                 </div>
@@ -90,7 +91,7 @@
                     <div class="card">
 
                         <!--Card image-->
-                        <img class="img-fluid" src="img/grammr.jpg" alt="CoopKoala">
+                        <img class="img-fluid" src="img/burere-card.jpg" alt="CoopKoala">
                         <!--/.Card image-->
 
                         <!--Card content-->
@@ -115,7 +116,7 @@
                     <div class="card">
 
                         <!--Card image-->
-                        <img class="img-fluid" src="img/sm_map.png" alt="CoopKoala">
+                        <img class="img-fluid" src="img/nyambogo-card.jpg" alt="CoopKoala">
                         <!--/.Card image-->
 
                         <!--Card content-->
@@ -139,7 +140,7 @@
                     <!--Card-->
                     <div class="card">
                         <!--Card image-->
-                        <img class="img-fluid" src="img/CoopKoala.jpg" alt="CoopKoala">
+                        <img class="img-fluid" src="img/otho-card.jpg" alt="Otho Abwao Project">
                         <!--/.Card image-->
                         <!--Card content-->
                         <div class="card-block">
