Card and Donate button

--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
                     <a class="navbar-brand" href="#">Engineers Without Borders - University of Cincinnati</a>
                     <!--Links-->
                     <ul class="nav navbar-nav float-md-right smooth-scroll">
-                        <li class="nav-item active"> <a class="nav-link" href="#">HOME </a> </li>
+                        <li class="nav-item "> <a class="nav-link" href="#">HOME </a> </li>
                         <li class="nav-item"> <a class="nav-link" href="#work">PROJECTS</a> </li>
                         <li class="nav-item"> <a class="nav-link" href="#work">CONTACT</a> </li>
                         <li class="nav-item"> <a class="nav-link" href="#about">ABOUT</a> </li>
+                        <li class="nav-item active"> <a class="nav-link" href="#about">DONATE</a> </li>
+
                     </ul>
                 </div>
                 <!--/.Collapse content-->
