Build the change

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                         <li class="nav-item "> <a class="nav-link" href="#">HOME </a> </li>
                         <li class="nav-item"> <a class="nav-link" href="#work">PROJECTS</a> </li>
                         <li class="nav-item"> <a class="nav-link" href="#work">CONTACT</a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="#about">ABOUT</a> </li>
                         <li class="nav-item active"> <a class="nav-link" href="#about">DONATE</a> </li>
 
                     </ul>
@@ -61,7 +60,7 @@
                     <div class="row" id="home">
                         <div class="pl-3 offset-lg-2 col-lg-8">
                             <div class="description text-xs-center">
-                                <h1 class="h1-responsive wow fadeInLeft">Unleashing Great Minds on Great Problems</h1>
+                                <h1 class="h1-responsive wow fadeInLeft">BUILD THE CHANGE</h1>
                                 <hr class="hr-light">
                                 <p class="wow fadeInLeft" data-wow-delay="0.4s">Engineers Without Borders USA builds a better world through engineering projects that empower communities to meet their basic human needs and equip leaders to solve the world’s most pressing challenges. 
                                 </p>
