:art:  navbar brand color update

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <!--Collapse content-->
                 <div class="collapse navbar-toggleable-xs" id="collapseEx">
                     <!--Navbar Brand-->
-                    <a class="navbar-brand" href="#">Engineers Without Borders - University of Cincinnati</a>
+                    <a class="navbar-brand" href="#"><span style="color: #000 !important">Engineers Without Borders</span> University of Cincinnati</a>
                     <!--Links-->
                     <ul class="nav navbar-nav float-md-right smooth-scroll">
                         <li class="nav-item "> <a class="nav-link" href="#">HOME </a> </li>
