Added Project Files

--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
                     <!--Links-->
                     <ul class="nav navbar-nav float-md-right smooth-scroll pt-2">
                         <li class="nav-item "> <a class="nav-link" href="#">HOME</a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="#work">PROJECTS</a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="#projects">CONTACT</a> </li>
-                        <li class="nav-item active"> <a class="nav-link" href="#donate">DONATE</a> </li>
-
+                        <li class="nav-item"> <a class="nav-link" href="#projects">PROJECTS</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="#">CONTACT</a> </li>
+                        <li class="nav-item active"> <a class="nav-link" href="https://support.ewb-usa.org/events/-/e84133" target="_blank">DONATE</a> </li>
                     </ul>
                 </div>
                 <!--/.Collapse content-->
@@ -77,8 +76,8 @@
     </header>
     <!--/Navigation & Intro-->
     <!-- Work -->
-    <div id="work" class="container-fluid">
-        <div class="container ">
+    <div id="projects" class="container-fluid">
+        <div class="container pt-1">
             <h3 class="h3-projects text-xs-center mt-2">OUR PROJECTS</h3>
             <p class=" px-1 text-xs-center">
                Engineers Without Borders is involved in a variety of projects across the world.  Our chapter at University of Cincinnati has projects in Kenya and Tanzania, as well as local projects in Cincinnati.
@@ -98,7 +97,7 @@
                           <!--Text-->
                           <p class="card-text">Started in 2006, Otho Abwao, Kenya was our chapter's first partner community. This community of 500 people identified the need for clean and sanitary water that was easy to access.</p>
                           <div class="text-xs-center">
-                              <a href="#" target="_blank" class="btn blue">&nbsp;  Learn More</a>
+                              <a href="othoabwao.html" class="btn blue">&nbsp;  Learn More</a>
                           </div>
                       </div>
                       <!--/.Card content-->
@@ -119,7 +118,7 @@
                          <!--Text-->
                          <p class="card-text">As part of our joint venture with Village Life Outreach Project, we are working to provide a year-round source of potable water to a the community of Nyambogo, a village of roughly 5,000 people.</p>
                          <div class="text-xs-center">
-                             <a href="#" target="_blank" class="btn blue">&nbsp;  Learn More</a>
+                             <a href="nyambogo.html" class="btn blue">&nbsp;  Learn More</a>
                          </div>
                      </div>
                      <!--/.Card content-->
@@ -140,7 +139,7 @@
                          <!--Text-->
                          <p class="card-text">The community of Burere has proposed a water project, which EWB-UC has decided to take up. We will be evaluating the site in May 2017 before moving forward with implementation .</p>
                          <div class="text-xs-center">
-                             <a href="#" target="_blank" class="btn blue">&nbsp;  Learn More</a>
+                             <a href="burere-water.html" class="btn blue">&nbsp;  Learn More</a>
                          </div>
                      </div>
                      <!--/.Card content-->
@@ -161,7 +160,7 @@
                          <!--Text-->
                          <p class="card-text"> Obtained in 2009, the Burere Schoolhouse Project has been a joint venture between EWB-UC and Village Life Outreach Project (VLOP), a local non-profit that works in the Rorya District of Tanzania.</p>
                          <div class="text-xs-center">
-                             <a href="#" target="_blank" class="btn blue">&nbsp;  Learn More</a>
+                             <a href="burere-school.html" class="btn blue">&nbsp;  Learn More</a>
                          </div>
                      </div>
                      <!--/.Card content-->
@@ -182,7 +181,7 @@
                          <!--Text-->
                          <p class="card-text">EWB-UC is committed to giving back to the community of Cincinnati. This is accomplished through engineering projects with local high schools and non-profits such as Habitat for Humanity.</p>
                          <div class="text-xs-center">
-                             <a href="#" target="_blank" class="btn blue">&nbsp;  Learn More</a>
+                             <a href="local.html" class="btn blue">&nbsp;  Learn More</a>
                          </div>
                      </div>
                      <!--/.Card content-->
@@ -203,7 +202,7 @@
                          <!--Text-->
                          <p class="card-text">Roche is our latest project! We are working with the community and EWB-USA to kick it off by Summer 2017. This will be a brand new water project in Roche, Tanzania.</p>
                          <div class="text-xs-center">
-                             <a href="#" target="_blank" class="btn blue">&nbsp;  Learn More</a>
+                             <a href="roche.html" class="btn blue">&nbsp;  Learn More</a>
                          </div>
                      </div>
                      <!--/.Card content-->
